# ti_cc1352_exp

./: CMakeLists.txt  Kconfig  README.md  app.overlay  build_Logs  conf_1.c  conf_2.c  prj.conf
include/: ti_driver_config.h  ti_radio_config.h
src/: CMakeLists.txt  main.c  rfPacketTx.c  temp.c  ti_radio_config.c
